syntax = "proto3";

package com.bracehealth.shared;

option java_multiple_files = true;
option java_package = "com.bracehealth.shared";

import "payer_claim.proto";
import "remittance.proto";

/**
 * Psuedo implementation of a clearinghouse.
 * In practice this service is not owned by bracehealth, so this definition is really just a stub for simulation purposes.
 */ 
service ClearingHouseService {
  rpc processClaim(ProcessClaimRequest) returns (ProcessClaimResponse);
}
  
message ProcessClaimResponse {
  bool success = 1;
}
  
message ProcessClaimRequest {
  // In theory this requeset would also include a "callback" so the ClearingHouse could notify the BillingService when the claim is processed.
  PayerClaim claim = 1;
}


